Add multi-period RS calculation
- Support 6 time periods: current, 1w, 1m, 3m, 6m, 1y ago
- Extended data collection to 600 days
- Calculate RS and percentile for each period
- CSV output includes all historical RS values

--- a/config.yaml
+++ b/config.yaml
@@ -25,7 +25,7 @@ MIN_MARKET_CAP: 500000000     # $500M 이상
 MAX_TICKERS_BY_CAP: 1000      # 시가총액 상위 N개
 
 # 데이터 품질 필터
-MIN_TRADING_DAYS: 200         # 최소 거래일 수
+MIN_TRADING_DAYS: 350         # 최소 거래일 수 (멀티 기간 RS 계산용)
 MIN_AVG_VOLUME: 100000        # 최소 평균 거래량
 
 # GitHub Actions 설정
